complete the nav

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <header>
         <nav class="nav">
             <h3 class="nav-title">
-                Prome
+                Pro<span class="nav-letter">m</span>e
             </h3>
-            <ul>
+            <ul class="menu">
                 <li>
                     <a href="">Portfolio</a>
                 </li>
