--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,14 @@
     <link rel="stylesheet" href="styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
 
 </head>
+
 <body>
-    <header>
+    <header class="header">
         <nav class="nav">
             <h3 class="nav-title">
                 Pro<span class="nav-letter">m</span>e
@@ -30,15 +33,55 @@
                 </li>
             </ul>
         </nav>
+
+        <div class="banner">
+            <div>
+                <h3>Hi, I am</h3>
+                <h1>Sabrina Yesmin Prome</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed <br>formerly he. Morning because as to
+                    society behaved moments.</p>
+
+                <button class="download-btn">Download CV</button>
+                <button class="contact-btn"> Contact</button>
+
+            </div>
+            <div class="profile-pic">
+                <img  src="images/hardy.png" alt="">
+            </div>
+        </div>
     </header>
 
-    <main> 
+    <main>
+        <section class="about">
+            <h3>About Me</h3>
+            <p>I, m a developer with a passion for web developer. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-info-container">
+                <div class="about-inf">
+                    <h4>Name:</h4>
+                    <p> Sabrina Yesmin Prome</p>
+                </div>
+                <div class="about-inf">
+                    <h4>Email:</h4>
+                    <p>sabrinayesminprome <br> @gmail.com</p>
+                </div>
+                <div class="about-inf">
+                    <h4>Date of birth:</h4>
+                    <p>125 July 2001</p>
+                </div>
+                <div class="about-inf">
+                    <h4>From:</h4>
+                    <p>Rajshahi,Bangladesh</p>
+                </div>
+            </div>
+
+        </section>
 
     </main>
 
     <footer>
 
-        
+
     </footer>
 </body>
+
 </html>
